# openai-london-hackathon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mock_data.json  mock_schema.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml
backend/: license_strategy.ini  pyproject.toml  run.py
backend/app/: config.py  main.py  seed_data.py  store.py
backend/app/api/: skillpilot.py
backend/app/api/mirror/: __init__.py  mirror.py
backend/app/clients/: http.py
backend/app/dtos/: __init__.py  base.py  skillpilot.py
backend/app/dtos/mirror/: __init__.py  mirror.py
backend/app/llm/: __init__.py  agents.py
backend/app/llm/prompts/: __init__.py  growth_plan_system.jinja  growth_plan_user.jinja  profile_analysis_system.jinja  profile_analysis_user.jinja  resource_discovery_system.jinja  resource_discovery_user.jinja
backend/app/services/: skillpilot.py
backend/app/services/mirror/: __init__.py  mirror.py
backend/data/: internal_sources.json  session_store.json
backend/tests/: test_config.py  test_llm_agents.py  test_skillpilot_api.py
docs/: END-TO-END-FLOW.md  PROJECT-STRUCTURE.md  skillpilot-end-to-end-sequence.mmd  skillpilot-openapi.yaml
frontend/: index.html  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/context/: SessionContext.tsx
frontend/src/hooks/: useDashboard.ts  useGrowthPlan.ts  useJobs.ts  useOnboarding.ts  usePreferences.ts  useSkillProfile.ts  useSources.ts  useTasks.ts
frontend/src/pages/: Dashboard.tsx  DataSources.tsx  GrowthPath.tsx  Onboarding.tsx  Preferences.tsx  SkillProfile.tsx  TaskDetail.tsx
frontend/src/types/: api.ts
skills/git-workflow/: SKILL.md
skills/refactoring-code/: SKILL.md
skills/refactoring-code/references/: COMMON-REFACTORINGS.md  MODERN-PYTHON-PATTERNS.md  PERFORMANCE-PATTERNS.md
skills/update-docs/: SKILL.md
skills/update-docs/references/: CHANGETYPE-SUGGESTIONS.md
